# summarizer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
core/: llm_service.py  tasky.py  views.py
