[project]
name = "myproject"
version = "0.1.0"
description = "Django backend with LangChain for web search and LLM summarization"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15,<4.0",
    "python-dotenv>=1.0,<2.0",
    "openai>=1.0,<2.0",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-community>=0.3,<0.4",
    "tavily-python>=0.5,<0.6",
    "celery>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "django-ratelimit>=4.0,<5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.9,<5.0",
]